# dynamic_polymorfism_alternatives

./: CMakeLists.txt  README.md
src/: benchmark.ixx  function.ixx  main.cpp  object_oriented.ixx  procedural.ixx  strategy.ixx  type_erased.ixx  variant_visitor.ixx  visitor.ixx
